<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">Wallpapers</string>
    <string name="favorites_wallpapers">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Share</string>
    <string name="set_image_as">Set image as</string>
    <string name="rate_app">Rate this app</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="add_to_favorite_folder">Add Favorites</string>
    <string name="remove_of_favorite_folder">Remove of Favorites</string>
    <string name="show_favorite_folder">Show only Favorites</string>
    <string name="hide_favorite_folder">Show all wallpapers</string>
    <string name="about_content"><b>jlab.OfflinePhoneWallpapers v1.0</b>, contact to: <i> jlab.apps@gmail.com</i></string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="app_mail_not_found">You do not have an email application.</string>
    <string name="mail">jlab.apps@gmail.com</string>
    <string name="can_not_share_wallpaper">Cannot complete the "Share" action</string>
    <string name="can_not_set_as_image">Cannot complete the "Set as" action</string>
    <string name="provide_permissions">Provide Permission for write in Local Storage</string>
    <string name="can_not_save_image">Cannot save image to Storage</string>
    <string name="save_complete">The wallpaper was saved correctly</string>
    <string name="save">Save</string>
</resources>
