<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mnFavorite"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnShare"
        android:orderInCategory="100"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnSetImageAs"
        android:orderInCategory="100"
        android:title="@string/set_image_as"
        android:icon="@android:drawable/ic_menu_set_as"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnSave"
        android:orderInCategory="100"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnRateApp"
        android:orderInCategory="100"
        android:title="@string/rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnAbout"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnClose"
        android:orderInCategory="100"
        android:title="@string/close"
        app:showAsAction="never" />
</menu>